--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
                 </tr>
                 <tr>
                     <td>笔记本清灰</td>
-                    <td>拆机清洁+更换硅脂（需自备硅脂）</td>
-                    <td>60元</td>
+                    <td>拆机清洁+更换硅脂（无需自备硅脂）</td>
+                    <td>30元</td>
                 </tr>
                 <tr>
                     <td>系统优化</td>
                     <td>开机加速+垃圾清理+基础设置优化</td>
-                    <td>30元</td>
+                    <td>20元</td>
                 </tr>
                 <tr>
                     <td>病毒查杀</td>
                     <td>全盘扫描+恶意软件清除</td>
-                    <td>40元</td>
+                    <td>15元</td>
                 </tr>
                 <tr>
                     <td>数据恢复</td>
@@ -240,8 +240,8 @@
             <div class="contact-method">
                 <h3>联系我们</h3>
                 <p><strong>微信：</strong> CampusPCRepair</p>
-                <p><strong>QQ：</strong> 123456789</p>
-                <p><strong>电话：</strong> 138-XXXX-XXXX</p>
+                <p><strong>QQ：</strong> 2681124670</p>
+                <p><strong>电话：</strong> 19138682026</p>
                 <p>服务时间：周一至周日 10:00-21:00</p>
                 <a href="#serviceForm" class="btn">立即预约</a>
             </div>
@@ -256,7 +256,7 @@
         </div>
 
         <footer>
-            <p>© 2023 校园电脑急救站 | 由计算机学院学生团队提供 | 最后更新: 2023年10月</p>
+            <p>© 2024 校园电脑急救站 | 由计算机学院学生团队提供 | 最后更新: 2024年1月</p>
         </footer>
     </div>
 
